style(adminpanel): fix action column alignment in alumni table

--- a/static/css/output.css
+++ b/static/css/output.css
@@ -626,6 +626,10 @@ video {
   grid-column: 1 / -1;
 }
 
+.m-0 {
+  margin: 0px;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -808,6 +812,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-20 {
+  width: 5rem;
 }
 
 .min-w-0 {
